added code to fetch countries dynamically through application.properties file

--- a/src/main/resources/templates/helloworld.html
+++ b/src/main/resources/templates/helloworld.html
@@ -9,5 +9,8 @@ Hello world of spring
 <br><br>
 <!--studentName is actual name of the form field-->
 Student name: <span th:text="${param.studentName}"></span>
+
+<br><br>
+The message <span th:text="${message}"></span>
 </body>
 </html>
