--- a/src/main/resources/templates/helloworld-form.html
+++ b/src/main/resources/templates/helloworld-form.html
@@ -5,7 +5,7 @@
     <title>Thymeleaf demo</title>
 </head>
 <body>
-<form th:action="@{/processForm}" method="GET">
+<form th:action="@{/processFormVersion3}" method="GET">
     <label>
         <input type="text" name="studentName" placeholder="What's your name?" />
     </label>
