--- a/src/main/resources/templates/student-confirmation.html
+++ b/src/main/resources/templates/student-confirmation.html
@@ -9,5 +9,7 @@
 The student is confirmed : <span th:text="${student.firstName} + '  ' + ${student.lastName}"></span>
 <br><br>
 Student selected: <span th:text="${student.country}"></span>
+<br><br>
+Favourite programming language: <span th:text="${student.favouriteLanguage}"></span>
 </body>
 </html>
