--- a/src/main/resources/templates/student-confirmation.html
+++ b/src/main/resources/templates/student-confirmation.html
@@ -11,5 +11,10 @@ The student is confirmed : <span th:text="${student.firstName} + '  ' + ${studen
 Student selected: <span th:text="${student.country}"></span>
 <br><br>
 Favourite programming language: <span th:text="${student.favouriteLanguage}"></span>
+<br><br>
+Favourite Operating system:
+<ul>
+    <li th:each="tempSystem : ${student.favouriteSystems}" th:text="${tempSystem}"/>
+</ul>
 </body>
 </html>
